k8s/dpm-db-mongo-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-mongo-client
spec:
  replicas: 1
  selector:
    matchLabels: # define las etiquetas que el Deployment usará para identificar los Pods que administra.
      app: db-mongo-client # El Deployment buscará Pods con esta etiqueta.
  template: # plantilla del POD - aqui se configura el POD
    metadata:
      labels: # define las etiquetas que tendrán los Pods creados por el Deployment.
        app: db-mongo-client # Etiqueta asignada a los Pods creados por este template.
    spec: # Define las especificaciones generales para los Pods gestionados por este Deployment.
      containers:
      - name: mongo-client
        image: mongo-express:latest
        ports:
        - containerPort: 8081 # Puerto interno del contenedor
