k8s/dpm-kf-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kf-kafka
spec:
  replicas: 1
  selector:
    matchLabels: # define las etiquetas que el Deployment usará para identificar los Pods que administra.
      app: kf-kafka # El Deployment buscará Pods con esta etiqueta.
  template: # plantilla del POD - aqui se configura el POD
    metadata:
      labels: # define las etiquetas que tendrán los Pods creados por el Deployment.
        app: kf-kafka # Etiqueta asignada a los Pods creados por este template.
    spec:
      containers:
      - image: confluentinc/cp-kafka:latest
        name: kf-kafka
        ports:
        - containerPort: 9092 # Puerto interno del contenedor
        readinessProbe: # Sonda de lectura equivalente a healthcheck
          tcpSocket: # Verifica si un puerto dentro del contenedor está accesible mediante una conexión TCP.
            port: 9092
          periodSeconds: 30 # Periodicidad con que se verifica el estado.
          timeoutSeconds: 10 # Tiempo límite para cada intento de conexión.
          failureThreshold: 5 # Número de intentos fallidos antes de que la sonda sea marcada como fallida.
          initialDelaySeconds: 60  # Espera 60 segundos antes de realizar la primera comprobación
