k8s/svc-db-mongo-client.yml
apiVersion: v1
kind: Service
metadata:
  name: db-mongo-client
spec:
  type: NodePort
  ports:
    - port: 8081 # (PUERTO EN EL QUE SE EXPONDRA EL SERVICE asociado a un POD) Especifica el puerto en el que el servicio Kubernetes estará disponible para otros componentes dentro del clúster.
      protocol: TCP
      targetPort: 8081 # (PUERTO REAL DE LA APLICACION DENTRO DEL POD) Especifica el puerto en el pod (dentro del contenedor) al que el servicio debe enviar el tráfico.
  selector:
    app: db-mongo-client # Etiqueta igual a la del deployment
  type: LoadBalancer
