k8s/svc-kf-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kf-kafka
spec:
  ports:
  - port: 29092 # (PUERTO EN EL QUE SE EXPONDRA EL SERVICE asociado a un POD) Especifica el puerto en el que el servicio Kubernetes estará disponible para otros componentes dentro del clúster.
    protocol: TCP
    targetPort: 29092 # (PUERTO REAL DE LA APLICACION DENTRO DEL POD) Especifica el puerto en el pod (dentro del contenedor) al que el servicio debe enviar el tráfico.
  selector:
    app: kf-kafka
  type: ClusterIP
