k8s/ingress-pt-keycloak.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pt-keycloak
spec:
  tls:
    - hosts:
        - keycloak.192.168.49.2.nip.io
  rules:
    - host: keycloak.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pt-keycloak # Coincide con el nombre del Service
                port:
                  number: 8080 # Coincide con el puerto "port" del Service
